IDE: Reorder popup menuitems in Messages window. Generic items first and FPC specific after them. Move "Stay On Top" options to global options page for Messages.

--- a/ide/etmessageframe.lfm
+++ b/ide/etmessageframe.lfm
@@ -5,6 +5,7 @@ object MessagesFrame: TMessagesFrame
   Width = 444
   ClientHeight = 106
   ClientWidth = 444
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 297
   DesignTop = 171
