--- a/ide/exttooleditdlg.lfm
+++ b/ide/exttooleditdlg.lfm
@@ -1,7 +1,7 @@
 object ExternalToolOptionDlg: TExternalToolOptionDlg
-  Left = 350
+  Left = 636
   Height = 592
-  Top = 163
+  Top = 157
   Width = 661
   Caption = 'ExternalToolOptionDlg'
   ClientHeight = 592
@@ -9,18 +9,18 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
   Constraints.MinHeight = 350
   Constraints.MinWidth = 350
   KeyPreview = True
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  Position = poScreenCenter
-  LCLVersion = '1.9.0.0'
   object TitleLabel: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = TitleEdit
     AnchorSideTop.Side = asrCenter
     Left = 6
-    Height = 15
-    Top = 10
-    Width = 51
+    Height = 18
+    Top = 13
+    Width = 59
     BorderSpacing.Left = 6
     Caption = 'TitleLabel'
     ParentColor = False
@@ -30,9 +30,9 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideTop.Control = FileNameEdit
     AnchorSideTop.Side = asrCenter
     Left = 6
-    Height = 15
-    Top = 39
-    Width = 76
+    Height = 18
+    Top = 51
+    Width = 89
     BorderSpacing.Left = 6
     Caption = 'FilenameLabel'
     ParentColor = False
@@ -42,9 +42,9 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideTop.Control = MemoParameters
     AnchorSideTop.Side = asrCenter
     Left = 6
-    Height = 15
-    Top = 102
-    Width = 87
+    Height = 18
+    Top = 118
+    Width = 104
     BorderSpacing.Left = 6
     Caption = 'ParametersLabel'
     ParentColor = False
@@ -54,9 +54,9 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideTop.Control = WorkingDirEdit
     AnchorSideTop.Side = asrCenter
     Left = 6
-    Height = 15
-    Top = 164
-    Width = 88
+    Height = 18
+    Top = 185
+    Width = 103
     BorderSpacing.Left = 6
     Caption = 'WorkingDirLabel'
     ParentColor = False
@@ -67,10 +67,10 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideTop.Control = Owner
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 112
-    Height = 23
+    Left = 125
+    Height = 32
     Top = 6
-    Width = 543
+    Width = 530
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 24
     BorderSpacing.Around = 6
@@ -84,8 +84,8 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 6
-    Height = 107
-    Top = 189
+    Height = 125
+    Top = 216
     Width = 649
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
@@ -93,63 +93,73 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     Caption = 'OptionsGroupBox'
     ChildSizing.Layout = cclTopToBottomThenLeftToRight
     ChildSizing.ControlsPerLine = 3
-    ClientHeight = 87
+    ClientHeight = 96
     ClientWidth = 645
     TabOrder = 4
+    object ScanOutputDefaultCheckBox: TCheckBox
+      AnchorSideTop.Side = asrBottom
+      Left = 6
+      Height = 28
+      Top = 6
+      Width = 270
+      BorderSpacing.Around = 6
+      Caption = 'ScanOutputDefaultCheckBox'
+      TabOrder = 0
+    end
     object ScanOutputForFPCMessagesCheckBox: TCheckBox
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 19
-      Top = 6
-      Width = 232
+      Height = 22
+      Top = 40
+      Width = 270
       BorderSpacing.Around = 6
       Caption = 'ScanOutputForFPCMessagesCheckBox'
-      TabOrder = 0
+      TabOrder = 1
     end
     object ScanOutputForMakeMessagesCheckBox: TCheckBox
       AnchorSideTop.Side = asrBottom
       AnchorSideBottom.Side = asrBottom
       Left = 6
-      Height = 19
-      Top = 31
-      Width = 232
+      Height = 22
+      Top = 68
+      Width = 270
       BorderSpacing.Around = 6
       Caption = 'ScanOutputForMakeMessagesCheckBox'
       ParentShowHint = False
-      TabOrder = 1
+      TabOrder = 2
     end
     object ScannersButton: TButton
       AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 25
-      Top = 56
-      Width = 232
+      Left = 282
+      Height = 28
+      Top = 6
+      Width = 166
       AutoSize = True
       BorderSpacing.Around = 6
       Caption = 'ScannersButton'
-      TabOrder = 2
+      TabOrder = 3
     end
     object ShowConsoleCheckBox: TCheckBox
-      Left = 244
-      Height = 19
-      Top = 6
-      Width = 144
+      Left = 282
+      Height = 22
+      Top = 40
+      Width = 166
       Caption = 'ShowConsoleCheckBox'
-      OnChange = ShowConsoleCheckBoxChange
-      ParentShowHint = False
-      ShowHint = True
-      TabOrder = 3
-      Visible = False
-    end
-    object HideWindowCheckBox: TCheckBox
-      Left = 244
-      Height = 19
-      Top = 31
-      Width = 144
-      Caption = 'HideWindowCheckBox'
       ParentShowHint = False
       ShowHint = True
       TabOrder = 4
+      Visible = False
+      OnChange = ShowConsoleCheckBoxChange
+    end
+    object HideWindowCheckBox: TCheckBox
+      Left = 282
+      Height = 22
+      Top = 68
+      Width = 166
+      Caption = 'HideWindowCheckBox'
+      ParentShowHint = False
+      ShowHint = True
+      TabOrder = 5
       Visible = False
     end
   end
@@ -160,8 +170,8 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideRight.Control = OptionsGroupBox
     AnchorSideRight.Side = asrBottom
     Left = 6
-    Height = 25
-    Top = 302
+    Height = 90
+    Top = 347
     Width = 649
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
@@ -178,13 +188,13 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = ButtonPanel
     Left = 6
-    Height = 221
-    Top = 333
+    Height = 108
+    Top = 443
     Width = 649
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Around = 6
     Caption = 'MacrosGroupbox'
-    ClientHeight = 201
+    ClientHeight = 79
     ClientWidth = 645
     TabOrder = 6
     object MacrosListbox: TListBox
@@ -194,41 +204,42 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
       AnchorSideBottom.Control = MacrosGroupbox
       AnchorSideBottom.Side = asrBottom
       Left = 6
-      Height = 193
+      Height = 71
       Top = 2
-      Width = 497
+      Width = 491
       Anchors = [akTop, akLeft, akRight, akBottom]
       BorderSpacing.Left = 6
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 6
       ItemHeight = 0
-      OnClick = MacrosListboxClick
-      OnDblClick = MacrosListboxDblClick
       ScrollWidth = 503
       TabOrder = 0
+      TopIndex = -1
+      OnClick = MacrosListboxClick
+      OnDblClick = MacrosListboxDblClick
     end
     object MacrosInsertButton: TButton
       AnchorSideTop.Control = MacrosGroupbox
       AnchorSideRight.Control = MacrosGroupbox
       AnchorSideRight.Side = asrBottom
-      Left = 509
-      Height = 25
+      Left = 503
+      Height = 28
       Top = 2
-      Width = 130
+      Width = 136
       Anchors = [akTop, akRight]
       AutoSize = True
       BorderSpacing.Top = 2
       BorderSpacing.Right = 6
       Caption = 'MacrosInsertButton'
       Enabled = False
-      OnClick = MacrosInsertButtonClick
       TabOrder = 1
+      OnClick = MacrosInsertButtonClick
     end
   end
   object ButtonPanel: TButtonPanel
     Left = 6
-    Height = 26
-    Top = 560
+    Height = 29
+    Top = 557
     Width = 649
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
@@ -250,10 +261,10 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = TitleEdit
     AnchorSideRight.Side = asrBottom
-    Left = 112
+    Left = 125
     Height = 90
-    Top = 64
-    Width = 543
+    Top = 82
+    Width = 530
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Top = 6
     ScrollBars = ssAutoBoth
@@ -266,10 +277,10 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = TitleEdit
     AnchorSideRight.Side = asrBottom
-    Left = 112
-    Height = 23
-    Top = 35
-    Width = 543
+    Left = 125
+    Height = 32
+    Top = 44
+    Width = 530
     DialogOptions = [ofPathMustExist, ofFileMustExist, ofEnableSizing, ofViewDetail]
     FilterIndex = 1
     HideDirectories = False
@@ -289,10 +300,10 @@ object ExternalToolOptionDlg: TExternalToolOptionDlg
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = TitleEdit
     AnchorSideRight.Side = asrBottom
-    Left = 112
-    Height = 23
-    Top = 160
-    Width = 543
+    Left = 125
+    Height = 32
+    Top = 178
+    Width = 530
     ShowHidden = False
     ButtonWidth = 25
     NumGlyphs = 1
